<resources>
    <string name="app_name">Forecast app</string>

    <string name="template_temperature" translatable="false">%s°C</string>
    <string name="template_wind">%s km/h</string>
    <string name="template_humidity" translatable="false">%s%%</string>
    <string name="template_visibility">%s km</string>

    <string name="title_current_weather_wind">Wind</string>
    <string name="title_current_weather_humidity">Humidity</string>
    <string name="title_current_weather_visibility">Visibility</string>
    <string name="title_hourly_forecast">Hourly Forecast</string>
    <string name="title_daily_forecast">Daily Forecast</string>

    <string name="error_location_null">Restart geolocation</string>
    <string name="error_reject_permission">Give permission</string>

</resources>